2004-10-25  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/producers/firewire/firewire.py:

	Add width, height and framerate
	
2004-10-25  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/steps.py:
	* flumotion/wizard/wizard.py:

	Allow you to change worker and make things easily updatable

2004-10-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_vorbis.glade:
	  Fix quality setting, which is a float from 0.0 to 1.0

2004-10-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  Check for Twisted's version.  Fixes issue #46.

2004-10-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  check for Twisted, needs version check as well
	* m4/as-python.m4:
	new upstream version, check for python module

2004-10-25  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/admin.py:
	* flumotion/worker/worker.py: 
	Change runCode to execute the parameter and make the admin
	interface to it take a object, which it uses inspect.getsource to
	retrieve the source. This allows us to just send in a function
	instead of a string.

2004-10-22  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_tvcard.glade:
	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/main.py:
	* flumotion/common/errors.py:
	* flumotion/component/producers/bttv/bttv.py:
	* flumotion/wizard/steps.py:
	* flumotion/wizard/wizard.py:

	Query the tv-card for information and use it in the wizard.
	Fixes Issue #55
	
2004-10-22  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/wizard.py:
	Don't use a global instance of the wizard, only save the steps
	globally. Fixes Ticket #42
	

2004-10-22  Johan Dahlin  <johan@gnome.org>

	* Makefile.am:
	* misc/pycheckerrc:
	Add pychecker target and a configuration file that disables
	the most retarded checks.

2004-10-22  Johan Dahlin  <johan@gnome.org>

	* flumotion/worker/worker.py: Make sure that we send a tuple with
	exactly one item.
