@@ -111,7 +111,7 @@
 	  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 	  <property name="snap_to_ticks">False</property>
 	  <property name="wrap">False</property>
-	  <property name="adjustment">320 16 1024 1 16 10</property>
+	  <property name="adjustment">352 16 1024 1 16 10</property>
 	</widget>
 	<packing>
 	  <property name="left_attach">1</property>
@@ -133,7 +133,7 @@
 	  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 	  <property name="snap_to_ticks">False</property>
 	  <property name="wrap">False</property>
-	  <property name="adjustment">240 16 768 1 16 10</property>
+	  <property name="adjustment">288 16 768 1 16 10</property>
 	</widget>
 	<packing>
 	  <property name="left_attach">1</property>
@@ -155,7 +155,7 @@
 	  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 	  <property name="snap_to_ticks">False</property>
 	  <property name="wrap">False</property>
-	  <property name="adjustment">10 1 50 0.1 1 10</property>
+	  <property name="adjustment">10 1 25 0.1 1 10</property>
 	</widget>
 	<packing>
 	  <property name="left_attach">1</property>
