@@ -100,8 +100,7 @@ class Source(wizard.WizardStep):
 
         video_source = self.combobox_video.get_active()
         audio_source = self.combobox_audio.get_active()
-        if (has_video and video_source == VideoDevice.Firewire or
-            has_audio and audio_source == AudioDevice.Firewire):
+        if (has_audio and audio_source == AudioDevice.Firewire):
             self.wizard.combobox_worker.set_sensitive(True)
         else:
             self.wizard.combobox_worker.set_sensitive(False)
@@ -109,8 +108,6 @@ class Source(wizard.WizardStep):
     def get_next(self):
         if self.checkbutton_has_video:
             video_source = self.combobox_video.get_active()
-            if video_source == VideoDevice.Firewire:
-                return 'Overlay'
             return video_source.step
         elif self.checkbutton_has_audio:
             audio_source = self.combobox_audio.get_active()
